# mcp-multi-agent-server

./: .gitignore  CHANGELOG.csv  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ADD_AGENT.md  ARCHITECTURE.md  LEARNING_GUIDE.md
examples/: README.md  client_demo.py
src/mcp_multi_agent/: __init__.py  __main__.py  config.py  registry.py  server.py  storage.py
src/mcp_multi_agent/agents/: __init__.py  base.py  file_agent.py  finance_agent.py  kb_agent.py  notes_agent.py  task_agent.py  weather_agent.py
tests/: _helpers.py  conftest.py  test_file_agent.py  test_finance_agent.py  test_kb_agent.py  test_notes_agent.py  test_registry.py  test_server.py  test_storage.py  test_task_agent.py  test_weather_agent.py
